--- a/KBJ/Tilden2022.html
+++ b/KBJ/Tilden2022.html
@@ -1,62 +1,144 @@
-
-
 <!DOCTYPE html>
-
-
 <html>
-  <head>
 
-    <meta charset="utf-8">
-    <link href="libs/remark-css/metropolis.css" rel="stylesheet" />
-    <link href="libs/remark-css/metropolis-fonts.css" rel="stylesheet" />
-  </head>
-  <body>
-    <textarea id="source">
+<style>
+* {
+box-sizing: border-box;
+}
 
 
+body {font-family: helvecia, sans-serif;
 
-
-class: clear, center
-
-&lt;hr&gt;
-
-.wide-right[
-&lt;img src="images_paintings/Tilden7Vert.jpg "style="max-width:45%;"/&gt;
-]
-
-<a href="https://kjohnso.github.io/KBJ//"><h6>Back to Home</h6></a>
-
----
-
-
-class: clear, center
-
-&lt;hr&gt;
-
-.wide-right[
-&lt;img src="images_paintings/Tilden1.jpg "style="max-width:45%;"/&gt;
-]
-
-<a href="https://kjohnso.github.io/KBJ//"><h6>Back to Home</h6></a>
+margin-left: 100px;
+margin-right: 100px;
+margin-bottom: 100px;
+}
 
 
 
 
+h1 {
+text-align: center;
+font-size: 3.5em;
+font-weight: normal;
+ color: #999999;
 
----
-class: clear, no-number
+
+}
+
+h3 {
+text-align: center;
+font-size: 2.5em;
+font-weight: normal;
+ color: #999999;
 
 
- .pull-left[ &lt;img src=="images/00KensGuitarJPG.JPG" style="max-width:22%; padding: 30px 0px 0px 20px;float: right"/&gt; ].pull-left[ &lt;img src=="images/01KensGuit4.JPG" style="max-width:22%; padding: 30px 0px 0px 20px;float: right"/&gt; ].pull-left[ &lt;img src=="images/02KenGuit2.jpg" style="max-width:22%; padding: 30px 0px 0px 20px;float: right"/&gt; ].pull-left[ &lt;img src=="images/03KenGuit3.jpg" style="max-width:22%; padding: 30px 0px 0px 20px;float: right"/&gt; ].pull-left[ &lt;img src=="images/04KenGuit1.JPG" style="max-width:22%; padding: 30px 0px 0px 20px;float: right"/&gt; ].pull-left[ &lt;img src=="images/15RenGuitJPG.JPG" style="max-width:22%; padding: 30px 0px 0px 20px;float: right"/&gt; ].pull-left[ &lt;img src=="images/1RenGuit.JPG" style="max-width:22%; padding: 30px 0px 0px 20px;float: right"/&gt; ].pull-left[ &lt;img src=="images/1RenGuit1.JPG" style="max-width:22%; padding: 30px 0px 0px 20px;float: right"/&gt; ].pull-left[ &lt;img src=="images/28RenAmp.JPG" style="max-width:22%; padding: 30px 0px 0px 20px;float: right"/&gt; ].pull-left[ &lt;img src=="images/2RenAmp.JPG" style="max-width:22%; padding: 30px 0px 0px 20px;float: right"/&gt; ].pull-left[ &lt;img src="images/3RenGuity.JPG" style="max-width:22%; padding: 30px 0px 0px 20px;float: right"/&gt; ]
+}
+
+h6 {
+text-align: left;
+font-size: .9em;
+font-weight: normal;
+color:  cornflowerblue;
+margin-left: 10px;
+margin-top: 0px;
+margin-bottom: 10px;
+}
+
+h4 {
+text-align: center;
+font-size: 1.5em;
+font-weight: normal;
+ color:  cornflowerblue;
+margin-left: 10px;
+
+}
+
+.outer-grid {
+display: flex;
+flex-wrap: wrap;
+padding: 0 4px;
+}
+
+.inner-grid {
+flex: 33%;
+max-width: 33%;
+padding: 0 4px;
+}
+
+.inner-grid img {
+margin-top: 8px;
+width: 100%;
+padding: 10px;
+
+}
+
+.info-text {
+ position: relative;
+ color: grey;
+ font-size: .5em;
+ font-weight: bold;
+ padding: 13px;
+ flex-wrap: all;
+}
+
+.colm-text {
+ margin-left: 5px;
+ color: #999999;
+ font-size: 2em;
+}
 
 
-    </textarea>
-<script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
-<script>var slideshow = remark.create({
-"countIncrementalSlides": false
-});
-if (window.HTMLWidgets) slideshow.on('afterShowSlide', function (slide) {window.dispatchEvent(new Event('resize'));});
-(function() {var d = document, s = d.createElement("style"), r = d.querySelector(".remark-slide-scaler"); if (!r) return; s.type = "text/css"; s.innerHTML = "@page {size: " + r.style.width + " " + r.style.height +"; }"; d.head.appendChild(s);})();</script>
 
-  </body>
+
+.colm-text2 {
+ text-align: center;
+ margin-left: 200px;
+ color: #999999;
+ font-size: 1.5em;
+}
+
+
+
+
+
+@media screen and (max-width: 800px) {
+.inner-grid {
+flex: 33%;
+max-width: 100%;
+}
+}
+@media screen and (max-width: 600px) {
+.inner-grid {
+flex: 100%;
+max-width: 100%;
+}
+
+</style>
+
+<body>
+ <a href="https://kjohnso.github.io/KBJ"><h5 style:"margin-left:150px; color:red; ">Home</h5></a>
+<h4>Tilden Contes 2022</h4>
+
+<div class="outer-grid">
+
+
+
+
+ <div class="inner-grid"><a href=TildenConte2022/1TildenBranch.jpg><img src=TildenConte2022/1TildenBranch.jpg></a><a href=TildenConte2022/2TildenDrift2.jpg><img src=TildenConte2022/2TildenDrift2.jpg></a><a href=TildenConte2022/3TildenDrift1.jpg><img src=TildenConte2022/3TildenDrift1.jpg></a><a href=TildenConte2022/3zTildenDkBlue.jpg><img src=TildenConte2022/3zTildenDkBlue.jpg></a></div>  <div class="inner-grid"><a href=TildenConte2022/4TildenMound.jpg><img src=TildenConte2022/4TildenMound.jpg></a><a href=TildenConte2022/5TildenRocks.jpg><img src=TildenConte2022/5TildenRocks.jpg></a><a href=TildenConte2022/6TildenFishermen.jpg><img src=TildenConte2022/6TildenFishermen.jpg></a></div>  <div class="inner-grid"><a href=TildenConte2022/7TildenTrunk.jpg><img src=TildenConte2022/7TildenTrunk.jpg></a><a href=TildenConte2022/8TildenSand.jpg><img src=TildenConte2022/8TildenSand.jpg></a><a href=TildenConte2022/9TildenPosts.jpg><img src=TildenConte2022/9TildenPosts.jpg></a></div> 
+
+
+
+
+
+</div>
+
+
+
+</body>
 </html>
+
+
+
+
+
