--- a/KBJ/index.html
+++ b/KBJ/index.html
@@ -185,8 +185,8 @@ max-width: 100%;
      <a href="MikesProjects.html"><img src="MikeWithKensGuit.JPG"></a> 
 
 
-  <a href="MikesProjects.html"><h6>Photos of Mike's Projects</h6></a>
-
+  <a href="MikesProjects.html"><h6>Photos of Mike's Projects v1</h6></a>
+ <a href="MikesProjects2.html"><h6>Photos of Mike's Projects v2</h6></a>
 
 
 
