--- a/KBJ/MikesProjects2.html
+++ b/KBJ/MikesProjects2.html
@@ -90,8 +90,8 @@ img {vertical-align: middle;}
 /* The dots/bullets/indicators */
 .dot {
   cursor: pointer;
-  height: 15px;
-  width: 15px;
+  height: 10px;
+  width: 10px;
   margin: 0 2px;
   background-color: #bbb;
   border-radius: 50%;
@@ -111,9 +111,31 @@ img {vertical-align: middle;}
 }
 
 /* On smaller screens, decrease text size */
-@media only screen and (max-width: 300px) {
-  .prev, .next,.text {font-size: 11px}
+
+
+
+@media screen and (max-width: 800px) {
+.inner-grid {
+flex: 33%;
+max-width: 100%;
 }
+}
+@media screen and (max-width: 600px) {
+.inner-grid {
+flex: 100%;
+max-width: 100%;
+}
+
+
+
+
+
+
+
+
+
+
+
 </style>
 </head>
 <body>
