--- a/KBJ/MikesProjects2.html
+++ b/KBJ/MikesProjects2.html
@@ -125,7 +125,15 @@ max-width: 100%;
 flex: 100%;
 max-width: 100%;
 }
-
+}
+ 
+ 
+@media only screen and (orientation: landscape) {
+.inner-grid {
+flex: 33%;
+max-width: 100%;
+}
+}
 
 
 
