--- a/KBJ/MikesProjects2.html
+++ b/KBJ/MikesProjects2.html
@@ -128,10 +128,11 @@ max-width: 100%;
 }
  
  
-@media only screen and (orientation: landscape) {
+@media (max-width: 600px) and (orientation: landscape) {
 .inner-grid {
 flex: 33%;
 max-width: 100%;
+
 }
 }
 
