--- a/KBJ/MikesProjects2.html
+++ b/KBJ/MikesProjects2.html
@@ -128,14 +128,13 @@ max-width: 100%;
 }
  
  
-@media (max-width: 600px) and (orientation: landscape) {
+@media only screen and (max-device-width: 480px) and (orientation: landscape){
 .inner-grid {
 flex: 33%;
 max-width: 100%;
 
 }
 }
-
 
 
 
