--- a/KBJ/Tilden2022.html
+++ b/KBJ/Tilden2022.html
@@ -1,104 +1,117 @@
 <!DOCTYPE html>
 <html>
-
+<head>
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
-* {
-box-sizing: border-box;
-}
-
-
-body {font-family: helvecia, sans-serif;
-
-margin-left: 100px;
-margin-right: 100px;
-margin-bottom: 100px;
-}
+* {box-sizing: border-box}
+body {font-family: Verdana, sans-serif; 
 
 
 
-
-h1 {
-text-align: center;
-font-size: 3.5em;
-font-weight: normal;
- color: #999999;
-
-
-}
-
-h3 {
-text-align: center;
-font-size: 2.5em;
-font-weight: normal;
- color: #999999;
-
-
-}
-
-h6 {
-text-align: left;
-font-size: .9em;
-font-weight: normal;
-color:  cornflowerblue;
 margin-left: 10px;
-margin-top: 0px;
-margin-bottom: 10px;
+margin-right: 10px;
+
+
 }
 
-h4 {
+
+h5 {
 text-align: center;
-font-size: 1.5em;
+font-size: .7em;
 font-weight: normal;
- color:  cornflowerblue;
-margin-left: 10px;
+ color: slategrey;
+margin-top: 20px;
 
 }
 
-.outer-grid {
-display: flex;
-flex-wrap: wrap;
-padding: 0 4px;
+
+
+.mySlides {display: none}
+img {vertical-align: middle;}
+
+
+
+
+/* Slideshow container */
+.slideshow-container {
+  max-width: 900px;
+  position: relative;
+  margin: auto;
+
+
 }
 
-.inner-grid {
-flex: 33%;
-max-width: 33%;
-padding: 0 4px;
+/* Next & previous buttons */
+.prev, .next {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  padding: 16px;
+  margin-top: -22px;
+  color: white;
+  font-weight: bold;
+  font-size: 18px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
 }
 
-.inner-grid img {
-margin-top: 8px;
-width: 100%;
-padding: 10px;
-
+/* Position the "next button" to the right */
+.next {
+  right: 0;
+  border-radius: 3px 0 0 3px;
 }
 
-.info-text {
- position: relative;
- color: grey;
- font-size: .5em;
- font-weight: bold;
- padding: 13px;
- flex-wrap: all;
+/* On hover, add a black background color with a little bit see-through */
+.prev:hover, .next:hover {
+  background-color: rgba(0,0,0,0.8);
 }
 
-.colm-text {
- margin-left: 5px;
- color: #999999;
- font-size: 2em;
+/* Caption text */
+.text {
+  color: #f2f2f2;
+  font-size: 15px;
+  padding: 8px 12px;
+  position: absolute;
+  bottom: 8px;
+  width: 100%;
+  text-align: center;
+}
+
+/* Number text (1/3 etc) */
+.numbertext {
+  color: #f2f2f2;
+  font-size: 12px;
+  padding: 8px 12px;
+  position: absolute;
+  top: 0;
+}
+
+/* The dots/bullets/indicators */
+.dot {
+  cursor: pointer;
+  height: 10px;
+  width: 10px;
+  margin: 0 2px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.6s ease;
+}
+
+.active, .dot:hover {
+  background-color: #717171;
 }
 
 
 
-
-.colm-text2 {
- text-align: center;
- margin-left: 200px;
- color: #999999;
- font-size: 1.5em;
+@keyframes fade {
+  from {opacity: .4} 
+  to {opacity: 1}
 }
 
-
+/* On smaller screens, decrease text size */
 
 
 
@@ -108,37 +121,82 @@ flex: 33%;
 max-width: 100%;
 }
 }
+
 @media screen and (max-width: 600px) {
 .inner-grid {
 flex: 100%;
 max-width: 100%;
 }
+}
+
+
+
+@media only screen and (max-device-width: 480px) and (orientation: landscape){
+.inner-grid {
+flex: 33%;
+max-width: 100%;
+
+}
+}
+
+
+
+
+
 
 </style>
-
+</head>
 <body>
- <a href="https://kjohnso.github.io/KBJ"><h5 style:"margin-left:150px; color:red; ">Home</h5></a>
-<h4>Tilden Contes 2022</h4>
 
-<div class="outer-grid">
-
-
-
-
- <div class="inner-grid"><a href=TildenConte2022/1TildenBranch.jpg><img src=TildenConte2022/1TildenBranch.jpg></a><a href=TildenConte2022/2TildenDrift2.jpg><img src=TildenConte2022/2TildenDrift2.jpg></a><a href=TildenConte2022/3TildenDrift1.jpg><img src=TildenConte2022/3TildenDrift1.jpg></a><a href=TildenConte2022/3zTildenDkBlue.jpg><img src=TildenConte2022/3zTildenDkBlue.jpg></a></div>  <div class="inner-grid"><a href=TildenConte2022/4TildenMound.jpg><img src=TildenConte2022/4TildenMound.jpg></a><a href=TildenConte2022/5TildenRocks.jpg><img src=TildenConte2022/5TildenRocks.jpg></a><a href=TildenConte2022/6TildenFishermen.jpg><img src=TildenConte2022/6TildenFishermen.jpg></a></div>  <div class="inner-grid"><a href=TildenConte2022/7TildenTrunk.jpg><img src=TildenConte2022/7TildenTrunk.jpg></a><a href=TildenConte2022/8TildenSand.jpg><img src=TildenConte2022/8TildenSand.jpg></a><a href=TildenConte2022/9TildenPosts.jpg><img src=TildenConte2022/9TildenPosts.jpg></a></div> 
+<div class="slideshow-container">
+<div class="mySlides"><img src='TildenConte2022_orig/2TildenDrift2.jpg' style = "width:100%" ></div> <div class="mySlides"><img src='TildenConte2022_orig/4TildenMound.jpg' style = "width:100%" ></div> <div class="mySlides"><img src='TildenConte2022_orig/3zTildenDkBlue.jpg' style = "width:100%" ></div> <div class="mySlides"><img src='TildenConte2022_orig/8TildenSand.jpg' style = "width:100%" ></div> <div class="mySlides"><img src='TildenConte2022_orig/5TildenRocks.jpg' style = "width:100%" ></div> <div class="mySlides"><img src='TildenConte2022_orig/1TildenBranch.jpg' style = "width:100%" ></div> <div class="mySlides"><img src='TildenConte2022_orig/3TildenDrift1.jpg' style = "width:100%" ></div> <div class="mySlides"><img src='TildenConte2022_orig/7TildenTrunk.jpg' style = "width:100%" ></div> <div class="mySlides"><img src='TildenConte2022_orig/9TildenPosts.jpg' style = "width:100%" ></div> <div class="mySlides"><img src='TildenConte2022_orig/6TildenFishermen.jpg' style = "width:100%" ></div> 
 
 
 
 
+<a class="prev" onclick="plusSlides(-1)">❮</a>
+<a class="next" onclick="plusSlides(1)">❯</a>
 
 </div>
+<br>
+
+<div style="text-align:center">
+  <span class="dot" onclick="currentSlide(1)"></span> 
+  <span class="dot" onclick="currentSlide(2)"></span> 
+  <span class="dot" onclick="currentSlide(3)"></span> 
+</div>
+
+<script>
+let slideIndex = 1;
+showSlides(slideIndex);
+
+function plusSlides(n) {
+  showSlides(slideIndex += n);
+}
+
+function currentSlide(n) {
+  showSlides(slideIndex = n);
+}
+
+function showSlides(n) {
+  let i;
+  let slides = document.getElementsByClassName("mySlides");
+  let dots = document.getElementsByClassName("dot");
+  if (n > slides.length) {slideIndex = 1}    
+  if (n < 1) {slideIndex = slides.length}
+  for (i = 0; i < slides.length; i++) {
+    slides[i].style.display = "none";  
+  }
+  for (i = 0; i < dots.length; i++) {
+    dots[i].className = dots[i].className.replace(" active", "");
+  }
+  slides[slideIndex-1].style.display = "block";  
+  dots[slideIndex-1].className += " active";
+}
 
 
 
+</script>
+<a href="https://kjohnso.github.io/KBJ"><h5>Home</h5</a>
 </body>
-</html>
-
-
-
-
-
+</html> 
