--- a/KBJ/index.html
+++ b/KBJ/index.html
@@ -182,7 +182,7 @@ max-width: 100%;
   <div class="inner-grid">
 
 
-     <a href="MikesProjects.html"><img src="MikeWithKensGuit.JPG"></a> 
+     <a href="MikesProjects2.html"><img src="MikeWithKensGuit.JPG"></a> 
 
 
 
