--- a/KBJ/index.html
+++ b/KBJ/index.html
@@ -186,7 +186,7 @@ max-width: 100%;
 
 
 
- <a href="MikesProjects2.html"><h6>Photos of Mike's Projects v2</h6></a>
+ <a href="MikesProjects2.html"><h6>Photos of Mike's Projects</h6></a>
 
 
 
