--- a/Hobbies/index.html
+++ b/Hobbies/index.html
@@ -1,5 +1,35 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
+
+
+
+
+<head>
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet"/>
+
+</head>
+<body>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="container mt-5">
+ 
+
+
+
+
+
 <style>
 
 .links line {
@@ -17,7 +47,32 @@ text {
   font-size: 10px;
 }
 
+
+h6 {
+text-align: right;
+font-size: .8em;
+font-weight: normal;
+margin-right: 300px;
+color:  cornflowerblue;
+
+}
+
+
+
+
+
+
+
 </style>
+
+
+
+
+
+
+
+
+
 <svg width="960" height="600"></svg>
 
 <script src="https://d3js.org/d3.v4.min.js"></script>
@@ -110,4 +165,13 @@ function dragended(d) {
   d.fy = null;
 }
 //<script src="https://d3js.org/d3.v4.min.js"></script>
+
 </script>
+
+
+<a href="https://kjohnso.github.io/KBJ/"><h6>Home</h6></a>
+
+</body>
+
+
+</html>
