--- a/Hobbies/index.html
+++ b/Hobbies/index.html
@@ -58,7 +58,12 @@ color:  cornflowerblue;
 }
 
 
-
+@media screen and (max-width: 600px) {
+.inner-grid {
+flex: 100%;
+max-width: 100%;
+}
+}
 
 
 
