--- a/KBJ/index.html
+++ b/KBJ/index.html
@@ -147,9 +147,9 @@ max-width: 100%;
  
 
 
-      <a href="https://kjohnso.github.io/Parks//"><img 
-        src="Parks5.jpg" ></a>  
-  <p><a href="https://kjohnso.github.io/Parks"><h6>Parks Map</h6></a>
+      <img 
+        src="SkullMug5.jpg" >
+      <h6>Painting in Progress</h6>
 
 
 
