--- a/KBJ/index.html
+++ b/KBJ/index.html
@@ -193,6 +193,15 @@ max-width: 100%;
 
 
 
+      <a href="https://kjohnso.github.io/Parks//"><img 
+        src="Parks5.jpg" ></a>  
+  <p><a href="https://kjohnso.github.io/Parks"><h6>Parks Map</h6></a>
+
+
+
+
+
+
 
 
 
