--- a/KBJ/index.html
+++ b/KBJ/index.html
@@ -115,18 +115,11 @@ max-width: 100%;
 
  <div class="inner-grid">
 
-
+<img src="KarenInGarden.JPG">
+     <p><a href="https://kjohnso.github.io/Hobbies"><h6>Hobbies Diagram</h6></a>
   <a href="https://kjohnso.github.io/Hobbies"><img 
-        src="KarenInGarden.JPG"></a>  
-     
+        src="Hobbies2.png"></a>  
 
-
-       <p><a href="https://kjohnso.github.io/Hobbies"><h6>Hobbies Diagram</h6></a>
-
-
-
- <a href="https://kjohnso.github.io/Ptng"><img src="Tilden2.jpg"></a> 
-  <a href="https://kjohnso.github.io/Ptng"><h6>Oil Painting 2021</h6></a>
 
 
 
