--- a/PaintingsProg/index.html
+++ b/PaintingsProg/index.html
@@ -6,7 +6,7 @@
 
 <head>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-
+     <script src="https://code.jquery.com/jquery-3.3.1.min.js" type="text/javascript" ></script>
 </head>
 
 
