--- a/PaintingsProg/index.html
+++ b/PaintingsProg/index.html
@@ -5,38 +5,19 @@
 
 
 <head>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+
+
+
+
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+
+
+
+
 </head>
-
-
-
-<style>
-
-h2 {
-text-align: center;
-font-size: 2.5em;
-font-weight: normal;
- color: #999999;
-
- margin-top: 0px;
-
-}
-
-h4 {
-text-align: left;
-font-size: 1.2em;
-font-weight: normal;
- color:  darkgrey;
-
-margin-top: 0px;
-margin-bottom: 20px;
-
-}
-
-
-
-</style>
 
 
 
@@ -45,28 +26,29 @@ margin-bottom: 20px;
 <body>
 
 
-  <div class="row">
-<image class="img-responsive" src="Skullmug5.jpg" width= 1000, height = 100 />
-  </div>
-
  
-
- <h2> Hello </h2>
-
-
 <div class="container">
-  <div class="row row-cols-3">
-    <div class="col"><image class="img-responsive" src="Skullmug5.jpg" width= 400 />  <h4> Hi there,, this is col 1 </h4> </div>
-    <div class="col"><image class="img-responsive" src="Skullmug5.jpg" width= 400 />   <h4> Hi there,, this is col 2</h4></div>
-    <div class="col"><image class="img-responsive" src="Skullmug5.jpg" width= 400 />   <h4> Hi there,, this is col 3</h4></div>
-  
-  </div>
 
 
-
+<!-- Stack the columns on mobile by making one full-width and the other half-width -->
+<div class="row">
+  <div class="col-12 col-md-8"><image class="img-responsive" src="Skullmug5.jpg" width= 500 />   <h4> Hi there,, this is col-12 col-md-8</h4></div>
+  <div class="col-6 col-md-4"><image class="img-responsive" src="Skullmug5.jpg" width= 500 />   <h4> Hi there,, this is col-6 col-md-4</h4></div>
 
 
 </div>
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
