--- a/PaintingsProg/index.html
+++ b/PaintingsProg/index.html
@@ -30,14 +30,26 @@
 <div class="container">
 
 
-<!-- Stack the columns on mobile by making one full-width and the other half-width -->
+
+
 <div class="row">
-  <div class="col-12 col-md-8"><image class="img-responsive" src="Skullmug5.jpg" width= 500 />   <h4> Hi there,, this is col-12 col-md-8</h4></div>
-  <div class="col-6 col-md-4"><image class="img-responsive" src="Skullmug5.jpg" width= 500 />   <h4> Hi there,, this is col-6 col-md-4</h4></div>
+  <div class="col-sm"><image class="img-responsive" src="Skullmug5.jpg" width= 400 /> col-sm</div>
+  <div class="col-sm"><image class="img-responsive" src="Skullmug5.jpg" width= 400 /> col-sm</div>
+  <div class="col-sm"><image class="img-responsive" src="Skullmug5.jpg" width= 400 /> col-sm</div>
+</div>
+
+
+
+
+
+
+
+
+
+
 
 
 </div>
-
 
 
 
