--- a/PaintingsProg/index.html
+++ b/PaintingsProg/index.html
@@ -33,9 +33,12 @@
 
 
 <div class="row">
-  <div class="col-sm"><image class="img-responsive" src="Skullmug5.jpg" width= 400 /> col-sm</div>
-  <div class="col-sm"><image class="img-responsive" src="Skullmug5.jpg" width= 400 /> col-sm</div>
-  <div class="col-sm"><image class="img-responsive" src="Skullmug5.jpg" width= 400 /> col-sm</div>
+ 
+  <div class="col-sm"><image class="img-fluid" src="Skullmug5.jpg" max-width=100% height=auto/> col-sm</div>
+   <div class="col-sm"><image class="img-fluid" src="Skullmug5.jpg" max-width=100% height=auto/> col-sm</div>
+   <div class="col-sm"><image class="img-fluid" src="Skullmug5.jpg" max-width=100% height=auto/> col-sm</div>
+
+
 </div>
 
 
