--- a/PaintingsProg/index.html
+++ b/PaintingsProg/index.html
@@ -32,17 +32,35 @@
 
 
 
+
 <div class="row">
- 
+  <div class="col-sm-8">HELLOW</div>
+  <div class="col-sm-4"></div>
+</div>
+<div class="row">
   <div class="col-sm"><image class="img-fluid" src="Skullmug5.jpg" max-width=100% height=auto/> col-sm</div>
-   <div class="col-sm"><image class="img-fluid" src="Skullmug5.jpg" max-width=100% height=auto/> col-sm</div>
-   <div class="col-sm"><image class="img-fluid" src="Skullmug5.jpg" max-width=100% height=auto/> col-sm</div>
+  <div class="col-sm"><image class="img-fluid" src="Skullmug5.jpg" max-width=100% height=auto/> col-sm</div>
+  <div class="col-sm"><image class="img-fluid" src="1TildenBranch.jpg" max-width=100% height=auto/> col-sm</div>
+
+
+<div class="row">
+  <div class="col-sm-8">HELLOW</div>
+  <div class="col-sm-4"></div>
+</div>
+<div class="row">
+  <div class="col-sm"><image class="img-fluid" src="Skullmug5.jpg" max-width=100% height=auto/> col-sm</div>
+  <div class="col-sm"><image class="img-fluid" src="Skullmug5.jpg" max-width=100% height=auto/> col-sm</div>
+  <div class="col-sm"><image class="img-fluid" src="1TildenBranch.jpg" max-width=100% height=auto/> col-sm</div>
+
+
+
+
+
+
+
 
 
 </div>
-
-
-
 
 
 
