--- a/PaintingsProg/index.html
+++ b/PaintingsProg/index.html
@@ -33,37 +33,21 @@
 
 
 
-<div class="row">
-
-
-
-<div class="row">
-  <div class="col-sm"><image class="img-fluid" src="1TildenBranch.jpg" max-width=100% height=auto/> col-sm</div>
- <div class="col-sm"><image class="img-fluid" src="Skullmug5.jpg" max-width=100% height=auto/> col-sm</div>
- <div class="col-sm"><image class="img-fluid" src="Skullmug5.jpg" max-width=100% height=auto/> col-sm</div>
-
-  <div class="col-sm"><image class="img-fluid" src="1TildenBranch.jpg" max-width=100% height=auto/> col-sm</div>
- <div class="col-sm"><image class="img-fluid" src="Skullmug5.jpg" max-width=100% height=auto/> col-sm</div>
- <div class="col-sm"><image class="img-fluid" src="Skullmug5.jpg" max-width=100% height=auto/> col-sm</div>
-
-
-
-
-
+<div class="container">
+    <div class="row text-center align-items-center">
 
 <div class="row">
   <div class="col-sm"><image class="img-fluid" src="1TildenBranch.jpg" max-width=100% height=auto/> col-sm</div>
  <div class="col-sm"><image class="img-fluid" src="Skullmug5.jpg" max-width=100% height=auto/> col-sm</div>
  <div class="col-sm"><image class="img-fluid" src="Skullmug5.jpg" max-width=100% height=auto/> col-sm</div>
-
-  <div class="col-sm"><image class="img-fluid" src="1TildenBranch.jpg" max-width=100% height=auto/> col-sm</div>
- <div class="col-sm"><image class="img-fluid" src="Skullmug5.jpg" max-width=100% height=auto/> col-sm</div>
- <div class="col-sm"><image class="img-fluid" src="Skullmug5.jpg" max-width=100% height=auto/> col-sm</div>
-
-
-
-
+    </div>
 </div>
+
+
+
+
+
+
 
 
 
