--- a/KBJ/index.html
+++ b/KBJ/index.html
@@ -138,13 +138,10 @@ max-width: 100%;
  
 
 
-      <img 
-        src="SkullMug5.jpg" >
-      <h6>Painting in Progress</h6>
 
 
-
-
+    <a href="https://kjohnso.github.io/PaintingsProg"><img src="SkullMug5.jpg"></a> 
+<p><a href="https://kjohnso.github.io/PaintingsProg"><h6>Ideas for Paintings</h6></a>
 
 
 
