--- a/PaintingsProg/index.html
+++ b/PaintingsProg/index.html
@@ -42,7 +42,7 @@
 
     
 
-        <div class="col-12 col-md-4"><image class="img-fluid" src="KarenPtngsProg/BirdPar.jpg" max-width=100% height=auto/>BirdPar</div>
+        <div class="col-12 col-md-4"><image class="img-fluid" src="KarenPtngsProg/WitchDollGym.jpg" max-width=100% height=auto/>WitchDollGym</div>
 
     <div class="col-12 col-md-4"><image class="img-fluid" src="KarenPtngsProg/SkullMug.jpg" max-width=100% height=auto/>SkullMug</div>
 
@@ -52,9 +52,9 @@
     <div class="col-12 col-md-6"><image class="img-fluid" src="KarenPtngsProg/TildenRocks.jpg" max-width=100% height=auto/>TildenRocks</div>
 
 
-            <div class="col-6 col-md-6"><image class="img-fluid" src="KarenPtngsProg/PurpleFlower.jpg" max-width=100% height=auto/>PurpleFlower</div>
+            <div class="col-6 col-md-6"><image class="img-fluid" src="KarenPtngsProg/RichmdSunrise.jpg" max-width=100% height=auto/>RichmdSunrise</div>
 
-
+            <div class="col-6 col-md-6"><image class="img-fluid" src="KarenPtngsProg/RichmdLakesideRoses.jpg" max-width=100% height=auto/>RichmdLakesideRoses</div>
 
 
 
