--- a/PaintingsProg/index.html
+++ b/PaintingsProg/index.html
@@ -58,7 +58,7 @@
 
             <div class="col-6 col-md-6"><image class="img-fluid" src="KarenPtngsProg/RichmdLakesideRoses.jpg" max-width=100% height=auto/>RichmdLakesideRoses</div>
 
-<div class="col-6 col-md-6"><a href="https://kjohnso.github.io/Hobbies"><h6>Home</h6> </div>
+<div class="col-6 col-md-6"><a href="https://kjohnso.github.io/KBJ"><h6>Home</h6> </div>
 
 
 
