--- a/KBJ/index.html
+++ b/KBJ/index.html
@@ -176,6 +176,7 @@ max-width: 100%;
 
  <a href="MikesProjects2.html"><h6>Photos of Mike's Projects</h6></a>
 
+ <a href="MikesProjectsv2.html"><h6>Photos of Mike's Projects V2</h6></a>
 
 
 
