--- a/KBJ/index.html
+++ b/KBJ/index.html
@@ -169,13 +169,13 @@ max-width: 100%;
   <div class="inner-grid">
 
 
-     <a href="https://kjohnso.github.io/MikeProjects.html"><img src="MikeWithKensGuit.JPG"></a> 
+
+
+     <a href="https://kjohnso.github.io/MikeProjects/"><img src="MikeWithKensGuit.JPG"></a> 
 
 
 
- <a href="https://kjohnso.github.io/MikeProjects.html"><h6>Photos of Mike's Projects</h6></a>
-
-
+ <a href="https://kjohnso.github.io/MikeProjects/"><h6>Photos of Mike's Projects</h6></a>
 
 
 
