--- a/KBJ/index.html
+++ b/KBJ/index.html
@@ -33,7 +33,7 @@
 
 
 
-          <div class="col-sm-4"><image class="img-fluid" src="KBJ/KarenInGarden.JPG"  max-width=100% height=auto/></div>
+         <div class="col-sm-4"><image class="img-fluid" src="KBJ/KarenInGarden.JPG"  max-width=100% height=auto/><a href="https://kjohnso.github.io/Hobbies/"><h6>Hobbies Diagram</h6></a></div>
          <div class="col-sm-4"><image class="img-fluid" src="KBJ/SkullMug5.jpg" max-width=100% height=auto/><a href="https://kjohnso.github.io/PaintingsProg"><h6>Conte Gallery</h6></a></div>
 
 
