--- a/Ptng/index.html
+++ b/Ptng/index.html
@@ -17,7 +17,7 @@ class: center, middle, inverse, title-slide
 
 #Paintings by KBJ
 ### October 2021
-
+###<a href="https://kjohnso.github.io/KBJ"><h6>Home</h6> 
 
 ---
 
