--- a/KBJ/index.html
+++ b/KBJ/index.html
@@ -33,7 +33,13 @@
 
 
 
-         <div class="col-sm-4"><image class="img-fluid" src="KBJ/KarenInGarden.JPG"  max-width=100% height=auto/><a href="https://kjohnso.github.io/Hobbies/"><h6>Hobbies Diagram</h6></a></div>
+          <div class="col-sm-4"><image class="img-fluid" src="KBJ/KarenInGarden.JPG"  max-width=100% height=auto/><a href="https://kjohnso.github.io/Hobbies/"><h6>Hobbies Diagram</h6></a></div>
+        
+
+
+
+
+
          <div class="col-sm-4"><image class="img-fluid" src="KBJ/SkullMug5.jpg" max-width=100% height=auto/><a href="https://kjohnso.github.io/PaintingsProg"><h6>Conte Gallery</h6></a></div>
 
 
@@ -46,8 +52,14 @@
 
 
         <div class="col-sm-6"><image class="img-fluid" src="KBJ/Parks5.jpg" max-width=100% height=auto/><a href="https://kjohnso.github.io/Parks"><h6>Parks Map</h6></a></div>
-       <div class="col-sm-6"><image class="img-fluid" src="KBJ/Tilden2.jpg" max-width=100% height=auto/><a href="https://kjohnso.github.io/Ptng"><h6>Paintings</h6></a></div>
+       <div class="col-sm-6"><image class="img-fluid" src="KBJ/ProspPk1.jpg" max-width=100% height=auto/><a href="https://kjohnso.github.io/Ptng"><h6>Paintings</h6></a></div>
+
+
           <div class="col-sm-6"><image class="img-fluid" src="KBJ/7TildenTrunk.jpg" max-width=100% height=auto/>  <a href="Tilden2022.html"><h6>Tilden 2022</h6></a>
+ 
+    
+
+
  </div>
 
 
