--- a/KBJ/index.html
+++ b/KBJ/index.html
@@ -55,14 +55,14 @@
 
        <div class="col-sm-5"><image class="img-fluid" src="KBJ/Parks5.jpg" max-width=100% height=auto/><a href="https://kjohnso.github.io/Parks"><h6>Parks Map</h6></a></div>
 
-
  
     
        <div class="col-sm-7"><image class="img-fluid" src="KBJ/ProspPk1.jpg" max-width=100% height=auto/><a href="https://kjohnso.github.io/Ptng"><h6>Paintings</h6></a></div>
 
 
-          <div class="col-sm-7"><image class="img-fluid" src="KBJ/7TildenTrunk.jpg" max-width=100% height=auto/>  <a href="Tilden2022.html"><h6>Tilden 2022</h6></a> </div>
+          <div class="col-sm-6"><image class="img-fluid" src="KBJ/7TildenTrunk.jpg" max-width=100% height=auto/>  <a href="Tilden2022.html"><h6>Tilden 2022</h6></a> </div>
 
+         <div class="col-sm-6"><image class="img-fluid" src="KBJ/Tilden3.jpg" max-width=100% height=auto/>  <a href="Tilden2022.html"><h6>Older Tilden</h6></a> </div>
 
   </div>
 
