--- a/KBJ/Tilden2022.html
+++ b/KBJ/Tilden2022.html
@@ -130,14 +130,17 @@ max-width: 100%;
 }
 
 
+@media screen and (orientation: landscape) {
 
-@media only screen and (max-device-width: 480px) and (orientation: landscape){
 .inner-grid {
 flex: 33%;
-max-width: 50%;
+max-height: 100%;
 
+
+/* your CSS to target only landscape mobile users */
 }
 }
+
 
 
 
@@ -149,8 +152,9 @@ max-width: 50%;
 <body>
 
 <div class="slideshow-container">
-<div class="mySlides"><img src='TildenConte2022/2TildenDrift2.jpg' style = "width:100%" ></div> <div class="mySlides"><img src='TildenConte2022/4TildenMound.jpg' style = "width:100%" ></div> <div class="mySlides"><img src='TildenConte2022/3zTildenDkBlue.jpg' style = "width:100%" ></div> <div class="mySlides"><img src='TildenConte2022/8TildenSand.jpg' style = "width:100%" ></div> <div class="mySlides"><img src='TildenConte2022/5TildenRocks.jpg' style = "width:100%" ></div> <div class="mySlides"><img src='TildenConte2022/1TildenBranch.jpg' style = "width:100%" ></div> <div class="mySlides"><img src='TildenConte2022/3TildenDrift1.jpg' style = "width:100%" ></div> <div class="mySlides"><img src='TildenConte2022/7TildenTrunk.jpg' style = "width:100%" ></div> <div class="mySlides"><img src='TildenConte2022/9TildenPosts.jpg' style = "width:100%" ></div> <div class="mySlides"><img src='TildenConte2022/6TildenFishermen.jpg' style = "width:100%" ></div> 
-
+<div class="mySlides"><img src='TildenConte2022/2TildenDrift2.jpg' style = "width:100%" ></div> <div class="mySlides"><img src='TildenConte2022/4TildenMound.jpg' style = "width:100%" ></div> <div class="mySlides"><img src='TildenConte2022/3zTildenDkBlue.jpg' style = "width:100%" ></div> <div class="mySlides"><img src='TildenConte2022/8TildenSand.jpg' style = "width:100%" ></div> <div class="mySlides"><img src='TildenConte2022/5TildenRocks.jpg' style = "width:100%" ></div> <div class="mySlides"><img src='TildenConte2022/1TildenBranch.jpg' style = "width:100%" ></div> <div class="mySlides"><img src='TildenConte2022/3TildenDrift1.jpg' style = "width:100%" ></div> <div class="mySlides"><img src='TildenConte2022/7TildenTrunk.jpg' style = "width:100%" ></div> <div class="mySlides"><img src='TildenConte2022/9TildenPosts.jpg' style = "width:100%" ></div> 
+<div class="mySlides"><img src='TildenConte2022/6TildenFishermen.jpg' style = "width:100%" ></div> 
+<div class="mySlides"><img src='TildenConte2022/TildenBlue2.jpg' style = "width:100%" ></div> 
 
 
 
