--- a/KBJ/index.html
+++ b/KBJ/index.html
@@ -33,14 +33,14 @@
 
 
 
-          <div class="col-sm-4"><image class="img-fluid" src="KBJ/KarenInGarden.JPG"  max-width=100% height=auto/><a href="https://kjohnso.github.io/Hobbies/"><h6>Hobbies Diagram</h6></a></div>
+          <div class="col-sm-4"><image class="img-fluid" src="KBJ/KarenInGarden.JPG"  max-width=100% height=auto/></div>
         
 
 
 
 
 
-         <div class="col-sm-4"><image class="img-fluid" src="KBJ/SkullMug5.jpg" max-width=100% height=auto/><a href="https://kjohnso.github.io/PaintingsProg"><h6>Conte Gallery</h6></a></div>
+         <div class="col-sm-4"><image class="img-fluid" src="KBJ/KarenMask.jpg" max-width=100% height=auto/><a href="https://kjohnso.github.io/Hobbies/"><h6>Hobbies Diagram</h6></a></div>
 
 
 
@@ -57,12 +57,12 @@
 
  
     
-       <div class="col-sm-7"><image class="img-fluid" src="KBJ/ProspPk1.jpg" max-width=100% height=auto/><a href="https://kjohnso.github.io/Ptng"><h6>Paintings</h6></a></div>
+       <div class="col-sm-7"><image class="img-fluid" src="KBJ/ProspPk1.jpg" max-width=100% height=auto/><a href="https://kjohnso.github.io/Ptng"><h6>Paintings 2021</h6></a></div>
 
 
-          <div class="col-sm-6"><image class="img-fluid" src="KBJ/TildenBlue2.jpg" max-width=100% height=auto/>  <a href="Tilden2022.html"><h6>Tilden 2022</h6></a> </div>
+          <div class="col-sm-6"><image class="img-fluid" src="KBJ/TildenBlue2.jpg" max-width=100% height=auto/>  <a href="Tilden2022.html"><h6>Tilden Conte 2022</h6></a> </div>
 
-         <div class="col-sm-6"><image class="img-fluid" src="KBJ/Tilden3.jpg" max-width=100% height=auto/>  <a href="Tilden2022.html"><h6>Older Tilden</h6></a> </div>
+         <div class="col-sm-6"><image class="img-fluid" src="KBJ/SkullMug5.jpg" max-width=100% height=auto/>  <a href="https://kjohnso.github.io/PaintingsProg"><h6>Contes 2012-22</h6></a></div>
 
   </div>
 
