--- a/KBJ/index.html
+++ b/KBJ/index.html
@@ -33,7 +33,7 @@
 
 
 
-          <div class="col-sm-4"><image class="img-fluid" src="KBJ/KarenInGarden.JPG"  max-width=100% height=auto/>&nbsp;</div>
+          <div class="col-sm-4"><image class="img-fluid" src="KBJ/KarenInGarden.jpg"  max-width=100% height=auto/>&nbsp;</div>
         
 
 
