--- a/PaintingsProg/index.html
+++ b/PaintingsProg/index.html
@@ -36,21 +36,19 @@
            <div class="col-sm-4"><image class="img-fluid" src="KarenPtngsProg/SkullMug.jpg" max-width=100% height=auto/>SkullMug</div>
   
 
-          <div class="col-sm-7"><image class="img-fluid" src="KarenPtngsProg/TildenRocks.jpg" max-width=100% height=auto/>TildenRocks</div>
+          <div class="col-sm-7"><image class="img-fluid" src="KarenPtngsProg/TildenRocks.jpg" max-width=100% height=auto/>TildenBeach</div>
 
 
 
-
-<div class="col-sm-6"><image class="img-fluid" src="KarenPtngsProg/FlowerByHudson.jpg" max-width=100% height=auto/>FlowerByHudson</div>
-
-
-
+          <div class="col-sm-7"><image class="img-fluid" src="KarenPtngsProg/FlowerByHudson.jpg" max-width=100% height=auto/>HudsonRivPk</div>
 
 
       
-          <div class="col-sm-5"><image class="img-fluid" src="KarenPtngsProg/StatLibWithBoat.jpg" max-width=100% height=auto/>StatLibWithBoat</div>
+          <div class="col-sm-4"><image class="img-fluid" src="KarenPtngsProg/StatLibWithBoat.jpg" max-width=100% height=auto/>StatLib</div>
 
 
+      
+          <div class="col-sm-4"><image class="img-fluid" src="KarenPtngsProg/ProspParkLillies.jpg" max-width=100% height=auto/>ProspParkLillies</div>
 
 
 
