--- a/PaintingsProg/index.html
+++ b/PaintingsProg/index.html
@@ -33,7 +33,7 @@
 
      
 
-           <div class="col-sm-4"><image class="img-fluid" src="KarenPtngsProg/SkullMug.jpg" max-width=100% height=auto/>SkullMug_Colletibles</div>
+           <div class="col-sm-4"><image class="img-fluid" src="KarenPtngsProg/SkullMug.jpg" max-width=100% height=auto/>SkullMug_StillLifes</div>
   
 
           <div class="col-sm-7"><image class="img-fluid" src="KarenPtngsProg/TildenRocks.jpg" max-width=100% height=auto/>Tilden_Beaches</div>
