--- a/MikeProjects/index.html
+++ b/MikeProjects/index.html
@@ -32,8 +32,58 @@
   <div class="row">
 
          <div class="col-sm-6"><image class="img-fluid" src="MikesProjects2/BenchPlaning.jpg" max-width=100% height=auto/>&nbsp;</div>
+
+
+
          
          <div class="col-sm-4"><image class="img-fluid" src="MikesProjects2/BenchOct.jpg" max-width=100% height=auto/>&nbsp;</div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+         <div class="col-sm-7"><image class="img-fluid" src="MikesProjects2/3MandolinsV1sm.jpg" max-width=100% height=auto/>&nbsp;</div>
+         <div class="col-sm-4"><image class="img-fluid" src="MikesProjects2/MikeWithBlacksm.jpg" max-width=100% height=auto/>&nbsp;</div>
+         
+         <div class="col-sm-4"><image class="img-fluid" src="MikesProjects2/ElizaFrontsm.jpg" max-width=100% height=auto/>&nbsp;</div>
+
+
+        <div class="col-sm-4"><image class="img-fluid" src="MikesProjects2/ElizasTopBackm.jpg" max-width=100% height=auto/>&nbsp;</div>
+
+        <div class="col-sm-4"><image class="img-fluid" src="MikesProjects2/ElizaBacksm.jpg" max-width=100% height=auto/>&nbsp;</div>
+
+        <div class="col-sm-4"><image class="img-fluid" src="MikesProjects2/ElizaTop2sm.jpg" max-width=100% height=auto/>&nbsp;</div>
+
+
+           <div class="col-sm-4"><image class="img-fluid" src="MikesProjects2/MikeTopssm.jpg" max-width=100% height=auto/>&nbsp;</div>
+
+
+        <div class="col-sm-4"><image class="img-fluid" src="MikesProjects2/MikesFrontsm.jpg" max-width=100% height=auto/>&nbsp;</div>
+
+
+        <div class="col-sm-4"><image class="img-fluid" src="MikesProjects2/MikesBacksm.jpg" max-width=100% height=auto/>&nbsp;</div>
+
+
+
+    <div class="col-sm-4"><image class="img-fluid" src="MikesProjects2/BlackTopsm.jpg" max-width=100% height=auto/>&nbsp;</div>
+
+
+        <div class="col-sm-4"><image class="img-fluid" src="MikesProjects2/BlackFrontsm.jpg" max-width=100% height=auto/>&nbsp;</div>
+
+
+
+
 
         <div class="col-sm-4"><image class="img-fluid" src="MikesProjects2/01KensGuit4.JPG" max-width=100% height=auto/>&nbsp;</div>
 
@@ -66,7 +116,9 @@
 
 
 
-
+        <div class="col-sm-4"><image class="img-fluid" src="MikesProjects2/VoglGuit2.jpg" max-width=100% height=auto/>&nbsp;</div>
+    <div class="col-sm-4"><image class="img-fluid" src="MikesProjects2/VoglGuit3.jpg" max-width=100% height=auto/>&nbsp;</div>
+    <div class="col-sm-4"><image class="img-fluid" src="MikesProjects2/VoglGuit4.jpg" max-width=100% height=auto/>&nbsp;</div>
 
      <div class="col-sm-6"><a href="https://kjohnso.github.io/KBJ"><h6>Home</h6> </div>
 
