--- a/KBJ/index.html
+++ b/KBJ/index.html
@@ -49,7 +49,7 @@
 
 
 
-    <div class="col-sm-7"><image class="img-fluid" src="KBJ/1TildenBranch.jpg" max-width=100% height=auto/><a href="https://kjohnso.github.io/Ptng"><h6>Tilden 2022</h6></a></div>
+    <div class="col-sm-7"><image class="img-fluid" src="KBJ/1TildenBranch.jpg" max-width=100% height=auto/><a href="Tilden2022.html"><h6>Tilden 2022</h6></a></div>
 
 
 
