--- a/KBJ/index.html
+++ b/KBJ/index.html
@@ -59,7 +59,7 @@
     
 
     
-          <div class="col-sm-5"><image class="img-fluid" src="KBJ/KareninGarden2.JPG"  max-width=100% height=auto/>&nbsp;</div>
+          <div class="col-sm-5"><image class="img-fluid" src="KBJ/KarenInGarden2.JPG"  max-width=100% height=auto/>&nbsp;</div>
 
 
 
