--- a/KBJ/index.html
+++ b/KBJ/index.html
@@ -38,15 +38,15 @@
 
 
 
-       <div class="col-sm-7"><image class="img-fluid" src="KBJ/ProspPk1.jpg" max-width=100% height=auto/><a href="https://kjohnso.github.io/Ptng"><h6>Paintings 2021</h6></a></div>
-
-
-
-
 
     <div class="col-sm-7"><image class="img-fluid" src="KBJ/1TildenBranch.jpg" max-width=100% height=auto/><a href="Tilden2022.html"><h6>Tilden 2022</h6></a></div>
 
   
+
+
+       <div class="col-sm-7"><image class="img-fluid" src="KBJ/ProspPk1.jpg" max-width=100% height=auto/><a href="https://kjohnso.github.io/Ptng"><h6>Paintings 2021</h6></a></div>
+
+
 
 
 
@@ -60,11 +60,11 @@
 
 
                 <div class="col-sm-5"><image class="img-fluid" src="KBJ/Parks.jpg" max-width=100% height=auto/><a href="https://kjohnso.github.io/Parks"><h6>Parks/Vistas Map</h6></a></div>
-    
+     <div class="col-sm-5"><image class="img-fluid" src="KBJ/StatLibWithBoat.jpg" max-width=100% height=auto/>&nbsp;</div>
 
   <div class="col-sm-7"><image class="img-fluid" src="KBJ/Angel.jpg" max-width=100% height=auto/>&nbsp;</div>
 
- <div class="col-sm-4"><image class="img-fluid" src="KBJ/StatLibWithBoat.jpg" max-width=100% height=auto/>&nbsp;</div>
+
 
 
   
@@ -77,10 +77,10 @@
 
 
 
-        <div class="col-sm-5"><image class="img-fluid" src="KBJ/ElizaFrontsm.jpg" max-width=100% height=auto/> <a href="https://kjohnso.github.io/MikeProjects/"><h6>Recent Photography</h6></a></div>
+        <div class="col-sm-6"><image class="img-fluid" src="KBJ/ElizaFrontsm.jpg" max-width=100% height=auto/> <a href="https://kjohnso.github.io/MikeProjects/"><h6>Photography</h6></a></div>
       <div class="col-sm-7"><image class="img-fluid" src="KBJ/HobbiesDiagram.png" max-width=100% height=auto/> <a href="https://kjohnso.github.io/Hobbies/"><h6>D3 Animation</h6></a></div>
 
-          <div class="col-sm-4"><image class="img-fluid" src="KBJ/KarenMask.jpg"  max-width=100% height=auto/>&nbsp;</div>
+          <div class="col-sm-5"><image class="img-fluid" src="KBJ/KarenMask.jpg"  max-width=100% height=auto/>&nbsp;</div>
 
 
 
