--- a/KBJ/index.html
+++ b/KBJ/index.html
@@ -60,9 +60,9 @@
 
 
                 <div class="col-sm-5"><image class="img-fluid" src="KBJ/Parks.jpg" max-width=100% height=auto/><a href="https://kjohnso.github.io/Parks"><h6>Parks/Vistas Map</h6></a></div>
-     <div class="col-sm-5"><image class="img-fluid" src="KBJ/StatLibWithBoat.jpg" max-width=100% height=auto/>&nbsp;</div>
+     <div class="col-sm-4"><image class="img-fluid" src="KBJ/StatLibWithBoat.jpg" max-width=100% height=auto/>&nbsp;</div>
 
-  <div class="col-sm-7"><image class="img-fluid" src="KBJ/Angel.jpg" max-width=100% height=auto/>&nbsp;</div>
+  <div class="col-sm-8"><image class="img-fluid" src="KBJ/PinkFlw.jpg" max-width=100% height=auto/>&nbsp;</div>
 
 
 
