--- a/KBJ/index.html
+++ b/KBJ/index.html
@@ -44,7 +44,7 @@
   
 
 
-       <div class="col-sm-7"><image class="img-fluid" src="KBJ/ProspPk1.jpg" max-width=100% height=auto/><a href="https://kjohnso.github.io/Ptng"><h6>Paintings 2021</h6></a></div>
+       <div class="col-sm-7"><image class="img-fluid" src="KBJ/Tilden2.jpg" max-width=100% height=auto/><a href="https://kjohnso.github.io/Ptng"><h6>Paintings 2021</h6></a></div>
 
 
 
