--- a/KBJ/index.html
+++ b/KBJ/index.html
@@ -37,18 +37,19 @@
        
 
 
-      <div class="col-sm-4"><image class="img-fluid" src="KBJ/KarenInGarden2.JPG" max-width=100%  height=auto/>&nbsp;</div>
+      <div class="col-sm-4"><image class="img-fluid" src="KBJ/KarenInGarden2.JPG" max-width=100%  height=auto/> <a href="https://kjohnso.github.io/Hobbies/"><h6>Hobbies Chart</h6></a></div>
 
     <div class="col-sm-8"><image class="img-fluid" src="KBJ/TildenBlue2.jpg" max-width=100% height=auto/><a href="Tilden2022.html"><h6>Tilden 2022</h6></a></div>
 
   
-
-
+  
     <div class="col-sm-4"><image class="img-fluid" src="KBJ/SkullMug5.jpg" max-width=100% height=auto/>  <a href="https://kjohnso.github.io/PaintingsProg"><h6>Contes 2012-22</h6></a></div>
 
 
-    <div class="col-sm-4"><image class="img-fluid" src="KBJ/KarenMask.jpg" max-width=100% height=auto/> <a href="https://kjohnso.github.io/Hobbies/"><h6>Hobbies Chart</h6></a></div>
 
+
+
+<div class="col-sm-4"><image class="img-fluid" src="KBJ/ProsPkFall.jpg" max-width=100% height=auto/>&nbsp;</div>
 
 
 
@@ -58,7 +59,7 @@
 
                 <div class="col-sm-5"><image class="img-fluid" src="KBJ/Parks.jpg" max-width=100% height=auto/><a href="https://kjohnso.github.io/Parks"><h6>Parks/Vistas Map</h6></a></div>
 
- <div class="col-sm-7"><image class="img-fluid" src="KBJ/PinkFlw.jpg" max-width=100% height=auto/>&nbsp;</div>
+ 
 
 
 
@@ -73,13 +74,12 @@
 
 
 
-       <div class="col-sm-8"><image class="img-fluid" src="KBJ/Tilden2.jpg" max-width=100% height=auto/><a href="https://kjohnso.github.io/Ptng"><h6>Paintings 2021</h6></a></div>
+       <div class="col-sm-7"><image class="img-fluid" src="KBJ/Tilden2.jpg" max-width=100% height=auto/><a href="https://kjohnso.github.io/Ptng"><h6>Paintings 2021</h6></a></div>
 
 
 
 
 
-  
 
 
   
