--- a/KBJ/index.html
+++ b/KBJ/index.html
@@ -89,6 +89,8 @@
 
   
      
+      <div class="col-sm-4"><image class="img-fluid" src="KBJ/KarenMask.jpg"max-width=100%  height=auto/> <a href="https://kjohnso.github.io/ProjectList/"><h6>Pre-Retirement Data Viz</h6></a></div>"
+
 
 
 
