--- a/KBJ/index.html
+++ b/KBJ/index.html
@@ -37,7 +37,7 @@
        
 
 
-      <div class="col-sm-4"><image class="img-fluid" src="KBJ/KarenInGarden2.JPG" max-width=100%  height=auto/> <a href="https://kjohnso.github.io/Hobbies/"><h6>Hobbies Chart</h6></a></div>
+      <div class="col-sm-4"><image class="img-fluid" src="KBJ/KarenInGarden2.JPG" max-width=100%  height=auto/> <a href="https://kjohnso.github.io/Hobbies/"><h6>Hobbies Diagram</h6></a></div>
 
     <div class="col-sm-8"><image class="img-fluid" src="KBJ/TildenBlue2.jpg" max-width=100% height=auto/><a href="Tilden2022.html"><h6>Tilden 2022</h6></a></div>
 
@@ -89,7 +89,7 @@
 
   
      
-      <div class="col-sm-4"><image class="img-fluid" src="KBJ/KarenMask.jpg"max-width=100%  height=auto/> <a href="https://kjohnso.github.io/ProjectList/"><h6>Pre-Retirement Data Viz</h6></a></div>"
+      <div class="col-sm-4"><image class="img-fluid" src="KBJ/KarenMask.jpg"max-width=100%  height=auto/> <a href="https://kjohnso.github.io/Meaning/"><h6>Meaning Diagram</h6></a></div>"
 
 
 
