--- a/KBJ/Tilden2022.html
+++ b/KBJ/Tilden2022.html
@@ -155,7 +155,7 @@ max-height: 100%;
 <div class="mySlides"><img src='TildenConte2022/2TildenDrift2.jpg' style = "width:100%" ></div> <div class="mySlides"><img src='TildenConte2022/4TildenMound.jpg' style = "width:100%" ></div> <div class="mySlides"><img src='TildenConte2022/3zTildenDkBlue.jpg' style = "width:100%" ></div> <div class="mySlides"><img src='TildenConte2022/8TildenSand.jpg' style = "width:100%" ></div> <div class="mySlides"><img src='TildenConte2022/5TildenRocks.jpg' style = "width:100%" ></div> <div class="mySlides"><img src='TildenConte2022/1TildenBranch.jpg' style = "width:100%" ></div> <div class="mySlides"><img src='TildenConte2022/3TildenDrift1.jpg' style = "width:100%" ></div> <div class="mySlides"><img src='TildenConte2022/7TildenTrunk.jpg' style = "width:100%" ></div> <div class="mySlides"><img src='TildenConte2022/9TildenPosts.jpg' style = "width:100%" ></div> 
 <div class="mySlides"><img src='TildenConte2022/6TildenFishermen.jpg' style = "width:100%" ></div> 
 <div class="mySlides"><img src='TildenConte2022/TildenBlue2.jpg' style = "width:100%" ></div> 
-
+<div class="mySlides"><img src='TildenConte2022/LastDay.jpg' style = "width:100%" ></div> 
 
 
 <a class="prev" onclick="plusSlides(-1)">❮</a>
