--- a/KBJ/index.html
+++ b/KBJ/index.html
@@ -89,7 +89,7 @@
 
   
      
-      <div class="col-sm-4"><image class="img-fluid" src="KBJ/KarenMask.jpg"max-width=100%  height=auto/> <a href="https://kjohnso.github.io/Meaning/"><h6>Meaning Diagram</h6></a></div>"
+      <div class="col-sm-4"><image class="img-fluid" src="KBJ/KarenMask.jpg"max-width=100%  height=auto/> <a href="https://kjohnso.github.io/Meaning/"><h6>Meaning Diagram</h6></a></div>
 
 
 
