--- a/KBJ/index.html
+++ b/KBJ/index.html
@@ -37,31 +37,36 @@
        
 
 
-      <div class="col-sm-4"><image class="img-fluid" src="KBJ/KarenInGarden2.JPG" max-width=100%  height=auto/> <a href="https://kjohnso.github.io/Hobbies/"><h6>Hobbies Diagram</h6></a></div>
+      <div class="col-sm-4"><image class="img-fluid" src="KBJ/KarenInGarden2.JPG" max-width=100%  height=auto/> <a href="https://kjohnso.github.io/Hobbies/"><h6>Diagran of Hobbies<h6></a></div>
 
 
 
 
-    <div class="col-sm-5"><image class="img-fluid" src="KBJ/TildenBlue2.jpg" max-width=100% height=auto/><a href="Tilden2022.html"><h6>Tilden 2022</h6></a></div>
-
-
-      <div class="col-sm-4"><image class="img-fluid" src="KBJ/ProsPkFall.jpg" max-width=100% height=auto/>&nbsp;</div>
-
-     
-      <div class="col-sm-5"><image class="img-fluid" src="CandleConte.jpg"max-width=100%  height=auto/> <a href="ChocBiscotti.pdf"><h6>Christmas Biscotti</h6></a></div>
+    <div class="col-sm-6"><image class="img-fluid" src="KBJ/TildenBlue2.jpg" max-width=100% height=auto/><a href="Tilden2022.html"><h6>Contes of Fort Tilden 2022</h6></a></div>
 
 
 
-  
-        <div class="col-sm-4"><image class="img-fluid" src="KBJ/MikeWithKensGuit.JPG" max-width=100% height=auto/> <a href="https://kjohnso.github.io/MikeProjects/indexAlt.html"><h6>Mike's Projects</h6></a></div>
+      <div class="col-sm-6"><image class="img-fluid" src="CandleConte.jpg"max-width=100%  height=auto/> <a href="ChocBiscotti.pdf"><h6>Christmas Biscotti Recipe</h6></a></div>
 
 
 
-       <div class="col-sm-5"><image class="img-fluid" src="KBJ/Tilden2.jpg" max-width=100% height=auto/><a href="https://kjohnso.github.io/Ptng"><h6>Paintings 2021</h6></a></div>
+       <div class="col-sm-4"><image class="img-fluid" src="KBJ/ProsPkFall.jpg""max-width=100%  height=auto/> <a href="PablosAlmondCookies.pdf"><h6>Choc Almond Cookies Recipte</h6></a></div>
+
+
+
+         <div class="col-sm-4"><image class="img-fluid" src="KBJ/SkullMug5.jpg" max-width=100% height=auto/>  <a href="https://kjohnso.github.io/PaintingsProg"><h6>Conte Collections 2012-22</h6></a></div>
 
 
   
-    <div class="col-sm-4"><image class="img-fluid" src="KBJ/SkullMug5.jpg" max-width=100% height=auto/>  <a href="https://kjohnso.github.io/PaintingsProg"><h6>Contes 2012-22</h6></a></div>
+ 
+
+
+
+       <div class="col-sm-6"><image class="img-fluid" src="KBJ/Tilden2.jpg" max-width=100% height=auto/><a href="https://kjohnso.github.io/Ptng"><h6>Paintings 2021</h6></a></div>
+
+
+  
+       <div class="col-sm-4"><image class="img-fluid" src="KBJ/MikeWithKensGuit.JPG" max-width=100% height=auto/> <a href="https://kjohnso.github.io/MikeProjects/indexAlt.html"><h6>Photos of Mike's Projects</h6></a></div>
 
 
 
