--- a/KBJ/index.html
+++ b/KBJ/index.html
@@ -37,7 +37,7 @@
        
 
 
-      <div class="col-sm-4"><image class="img-fluid" src="KBJ/KarenInGarden2.JPG" max-width=100%  height=auto/> <a href="https://kjohnso.github.io/Hobbies/"><h6>Diagran of Hobbies<h6></a></div>
+      <div class="col-sm-4"><image class="img-fluid" src="KBJ/KarenInGarden2.JPG" max-width=100%  height=auto/> <a href="https://kjohnso.github.io/Hobbies/"><h6>Hobbies<h6></a></div>
 
 
 
