--- a/KBJ/index.html
+++ b/KBJ/index.html
@@ -50,7 +50,7 @@
 
 
 
-       <div class="col-sm-4"><image class="img-fluid" src="KBJ/ProsPkFall.jpg""max-width=100%  height=auto/> <a href="PablosAlmondCookies.pdf"><h6>Choc Almond Cookies Recipte</h6></a></div>
+       <div class="col-sm-4"><image class="img-fluid" src="KBJ/ProsPkFall.jpg""max-width=100%  height=auto/> <a href="PablosAlmondCookies.pdf"><h6>Choc Almond Cookies Recipe</h6></a></div>
 
 
 
