--- a/KBJ/index.html
+++ b/KBJ/index.html
@@ -37,24 +37,24 @@
        
 
 
-      <div class="col-sm-4"><image class="img-fluid" src="KBJ/KarenInGarden2.JPG" max-width=100%  height=auto/> <a href="https://kjohnso.github.io/Hobbies/"><h6>Hobbies<h6></a></div>
+      <div class="col-sm-4"><image class="img-fluid" src="KBJ/KarenInGarden2.JPG" max-width=100%  height=auto/> <a href="https://kjohnso.github.io/Hobbies/"><h6>Diagram of Hobbies<h6></a></div>
 
 
 
 
-    <div class="col-sm-6"><image class="img-fluid" src="KBJ/TildenBlue2.jpg" max-width=100% height=auto/><a href="Tilden2022.html"><h6>Contes of Fort Tilden 2022</h6></a></div>
+    <div class="col-sm-7"><image class="img-fluid" src="KBJ/TildenBlue2.jpg" max-width=100% height=auto/><a href="Tilden2022.html"><h6>Contes of Fort Tilden 2022</h6></a></div>
 
 
 
-      <div class="col-sm-6"><image class="img-fluid" src="CandleConte.jpg"max-width=100%  height=auto/> <a href="ChocBiscotti.pdf"><h6>Christmas Biscotti Recipe</h6></a></div>
+      <div class="col-sm-5"><image class="img-fluid" src="CandleConte.jpg"max-width=100%  height=auto/> <a href="ChocBiscotti.pdf"><h6>Christmas Biscotti Recipe</h6></a></div>
 
 
 
-       <div class="col-sm-4"><image class="img-fluid" src="KBJ/ProsPkFall.jpg""max-width=100%  height=auto/> <a href="PabloAlmondCookies.pdf"><h6>Choc Almond Cookies Recipe</h6></a></div>
+       <div class="col-sm-3"><image class="img-fluid" src="KBJ/ProsPkFall2.jpg""max-width=100%  height=auto/> <a href="PabloAlmondCookies.pdf"><h6>Choc Almond Cookies Recipe</h6></a></div>
 
 
 
-         <div class="col-sm-4"><image class="img-fluid" src="KBJ/SkullMug5.jpg" max-width=100% height=auto/>  <a href="https://kjohnso.github.io/PaintingsProg"><h6>Conte Collections 2012-22</h6></a></div>
+         <div class="col-sm-3"><image class="img-fluid" src="KBJ/SkullMug5.jpg" max-width=100% height=auto/>  <a href="https://kjohnso.github.io/PaintingsProg"><h6>Conte Crayon Collections 2012-22</h6></a></div>
 
 
   
@@ -62,7 +62,7 @@
 
 
 
-       <div class="col-sm-6"><image class="img-fluid" src="KBJ/Tilden2.jpg" max-width=100% height=auto/><a href="https://kjohnso.github.io/Ptng"><h6>Paintings 2021</h6></a></div>
+       <div class="col-sm-7"><image class="img-fluid" src="KBJ/Tilden2.jpg" max-width=100% height=auto/><a href="https://kjohnso.github.io/Ptng"><h6>Oil Paintings 2021</h6></a></div>
 
 
   
