--- a/KBJ/index.html
+++ b/KBJ/index.html
@@ -20,7 +20,7 @@
 <div class="container">
 
 
-  <div class="row"> <h1>Karen's Projects</h1> </div>
+  <div class="row"> <h1>Karen's Hobbies</h1> </div>
 
 
 
@@ -37,7 +37,7 @@
        
 
 
-      <div class="col-sm-7"><image class="img-fluid" src="KBJ/KarenInGarden4.JPG" max-width=100%  height=auto/> <a href="https://kjohnso.github.io/Hobbies/"><h6>Diagram of Hobbies<h6></a></div>
+
 
 
 
@@ -72,11 +72,12 @@
 
     
   
+
+
+        <div class="col-sm-4"><image class="img-fluid" src="KBJ/KarenInGarden2.jpg" max-width=100%  height=auto/> <a href="https://kjohnso.github.io/Hobbies/"><h6>Diagram of Hobbies<h6></a></div>
+
+
        <div class="col-sm-4"><image class="img-fluid" src="KBJ/MikeWithKensGuit.JPG" max-width=100% height=auto/> <a href="https://kjohnso.github.io/MikeProjects/indexAlt.html"><h6>Photos of Mike's Projects</h6></a></div>
-
-
-  
-
 
 
 
