--- a/KBJ/index.html
+++ b/KBJ/index.html
@@ -74,7 +74,7 @@
   
 
 
-        <div class="col-sm-4"><image class="img-fluid" src="KBJ/KarenInGarden2.jpg" max-width=100%  height=auto/> <a href="https://kjohnso.github.io/Hobbies/"><h6>Diagram of Hobbies<h6></a></div>
+        <div class="col-sm-4"><image class="img-fluid" src="KBJ/KarenInGarden2.JPG" max-width=100%  height=auto/> <a href="https://kjohnso.github.io/Hobbies/"><h6>Diagram of Hobbies<h6></a></div>
 
 
        <div class="col-sm-4"><image class="img-fluid" src="KBJ/MikeWithKensGuit.JPG" max-width=100% height=auto/> <a href="https://kjohnso.github.io/MikeProjects/indexAlt.html"><h6>Photos of Mike's Projects</h6></a></div>
