--- a/KBJ/index.html
+++ b/KBJ/index.html
@@ -64,11 +64,8 @@
 
 
 
-    <div class="col-sm-6"><image class="img-fluid" src="KBJ/Parks.jpg" max-width=100% height=auto/><a href="https://kjohnso.github.io/Parks"><h6>Plotly Map of Parks/Vistas</h6></a></div>
 
-
-
-    <div class="col-sm-7"><image class="img-fluid" src="CandleConte.jpg"max-width=100%  height=auto/> <a href="ChocBiscotti.pdf"><h6>Christmas Biscotti Recipe</h6></a></div>
+    <div class="col-sm-7"><image class="img-fluid" src="CandleConte.jpg"max-width=100%  height=auto/><h4>Recipes</h4><a href="ChocBiscotti.pdf"><h6>Christmas Biscotti</h6><a href="PablosAlmondCookies.pdf"><h6>Almond Cookies</h6></a></div>
 
 
 
