--- a/KBJ/index.html
+++ b/KBJ/index.html
@@ -65,7 +65,7 @@
 
 
 
-    <div class="col-sm-7"><image class="img-fluid" src="CandleConte.jpg"max-width=100%  height=auto/><h4>Recipes</h4><a href="ChocBiscotti.pdf"><h6>Christmas Biscotti</h6><a href="PablosAlmondCookies.pdf"><h6>Almond Cookies</h6></a></div>
+    <div class="col-sm-7"><image class="img-fluid" src="CandleConte.jpg"max-width=100%  height=auto/><h4>Recipes</h4><a href="ChocBiscotti.pdf"><h6>Christmas Biscotti</h6><a href="PabloAlmondCookies.pdf"><h6>Almond Cookies</h6></a></div>
 
 
 
