--- a/MikeProjects/index.html
+++ b/MikeProjects/index.html
@@ -31,7 +31,31 @@
 
   <div class="row">
 
-    
+            <div class="col-sm-4"><image class="img-fluid" src="MikesProjects2/Jim1.jpg" max-width=100% height=auto/>&nbsp;</div>
+
+         <div class="col-sm-4"><image class="img-fluid" src="MikesProjects2/Jim2.jpg" max-width=100% height=auto/>&nbsp;</div>
+
+   
+   <div class="col-sm-4"><image class="img-fluid" src="MikesProjects2/Jim3.jpg" max-width=100% height=auto/>&nbsp;</div>
+
+         <div class="col-sm-4"><image class="img-fluid" src="MikesProjects2/Jim4.jpg" max-width=100% height=auto/>&nbsp;</div>
+
+   <div class="col-sm-4"><image class="img-fluid" src="MikesProjects2/Jim5jpg" max-width=100% height=auto/>&nbsp;</div>
+
+         <div class="col-sm-4"><image class="img-fluid" src="MikesProjects2/Eliza1.jpg" max-width=100% height=auto/>&nbsp;</div>
+
+
+
+
+
+         <div class="col-sm-4"><image class="img-fluid" src="MikesProjects2/Eliza2.jpg" max-width=100% height=auto/>&nbsp;</div>
+
+         <div class="col-sm-4"><image class="img-fluid" src="MikesProjects2/Eliza3.jpg" max-width=100% height=auto/>&nbsp;</div>
+
+
+
+
+
 
 
          
