--- a/MikeProjects/indexAlt.html
+++ b/MikeProjects/indexAlt.html
@@ -32,6 +32,30 @@
   <div class="row">
 
         
+        <div class="col-sm-4"><image class="img-fluid" src="MikesProjects2/Jim1.jpg" max-width=100% height=auto/>&nbsp;</div>
+
+         <div class="col-sm-4"><image class="img-fluid" src="MikesProjects2/Jim2.jpg" max-width=100% height=auto/>&nbsp;</div>
+
+   
+   <div class="col-sm-4"><image class="img-fluid" src="MikesProjects2/Jim3.jpg" max-width=100% height=auto/>&nbsp;</div>
+
+         <div class="col-sm-4"><image class="img-fluid" src="MikesProjects2/Jim4.jpg" max-width=100% height=auto/>&nbsp;</div>
+
+   <div class="col-sm-4"><image class="img-fluid" src="MikesProjects2/Jim5jpg" max-width=100% height=auto/>&nbsp;</div>
+
+         <div class="col-sm-4"><image class="img-fluid" src="MikesProjects2/Eliza1.jpg" max-width=100% height=auto/>&nbsp;</div>
+
+
+
+
+
+         <div class="col-sm-4"><image class="img-fluid" src="MikesProjects2/Eliza2.jpg" max-width=100% height=auto/>&nbsp;</div>
+
+         <div class="col-sm-4"><image class="img-fluid" src="MikesProjects2/Eliza3.jpg" max-width=100% height=auto/>&nbsp;</div>
+
+
+
+
 
 
          <div class="col-sm-6"><image class="img-fluid" src="MikesProjects2/S_DSC_0334.jpg" max-width=100% height=auto/>&nbsp;</div>
