--- a/MikeProjects/indexAlt.html
+++ b/MikeProjects/indexAlt.html
@@ -41,7 +41,7 @@
 
          <div class="col-sm-4"><image class="img-fluid" src="MikesProjects2/Jim4.jpg" max-width=100% height=auto/>&nbsp;</div>
 
-   <div class="col-sm-4"><image class="img-fluid" src="MikesProjects2/Jim5jpg" max-width=100% height=auto/>&nbsp;</div>
+   <div class="col-sm-4"><image class="img-fluid" src="MikesProjects2/Jim5.jpg" max-width=100% height=auto/>&nbsp;</div>
 
          <div class="col-sm-4"><image class="img-fluid" src="MikesProjects2/Eliza1.jpg" max-width=100% height=auto/>&nbsp;</div>
 
