--- a/MikeProjects/index.html
+++ b/MikeProjects/index.html
@@ -31,6 +31,36 @@
 
   <div class="row">
 
+
+        <div class="col-sm-4"><image class="img-fluid" src="MikesProjects2/Red2.JPG" max-width=100% height=auto/>&nbsp;</div>
+
+                <div class="col-sm-4"><image class="img-fluid" src="MikesProjects2/Red4.JPG" max-width=100% height=auto/>&nbsp;</div>
+
+
+                
+ <div class="col-sm-6"><image class="img-fluid" src="MikesProjects2/Red3.JPG" max-width=100% height=auto/>&nbsp;</div>
+   
+    <div class="col-sm-4"><image class="img-fluid" src="MikesProjects2/Red7.JPG" max-width=100% height=auto/>&nbsp;</div> 
+
+
+         <div class="col-sm-4"><image class="img-fluid" src="MikesProjects2/Red5.JPG" max-width=100% height=auto/>&nbsp;</div>
+
+   <div class="col-sm-4"><image class="img-fluid" src="MikesProjects2/Red6.JPG" max-width=100% height=auto/>&nbsp;</div>
+
+  <div class="col-sm-6"><image class="img-fluid" src="MikesProjects2/Red8.JPG" max-width=100% height=auto/>&nbsp;</div>
+
+
+
+
+
+
+
+
+
+
+
+
+   
             <div class="col-sm-4"><image class="img-fluid" src="MikesProjects2/Jim1.jpg" max-width=100% height=auto/>&nbsp;</div>
 
          <div class="col-sm-4"><image class="img-fluid" src="MikesProjects2/Jim2.jpg" max-width=100% height=auto/>&nbsp;</div>
